# 2

./:  docker-compose.yml  .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  KITCHEN_TASKS.md  Makefile.kitchen  README.md  app.py  build.rs  cargo.toml  dockerfile  makefile  render.yaml  requirements.txt  reviews.profile  test_grpc_with_token.sh  test_permission_fix.sh  test_procedure_with_token.sh  test_protoc_fix.sh  test_syntax_error.sh
.kiro/specs/api-documentation/: design.md  requirements.md  tasks.md
.lsp/.cache/: db.transit.json
benches/: grpc_connection_pool_benchmark.rs
docs/: grpc_connection_pooling.md
examples/: Cargo.toml  EXAMPLES_GUIDE.md  README.md
examples/authentication/: basic_auth.rs  jwt_refresh.rs  role_based_access.rs
examples/integration/: error_handling.rs  full_workflow.rs  rate_limiting.rs
examples/user_management/: profile_management.rs  user_crud.rs  user_stats.rs
migrations/: 20240608_000001_create_users.sql  20240608_000002_create_refresh_tokens.sql  20240723_000003_create_user_info_procedure.sql
proto/: user_stats.proto
proto/user_stats/: user_stats.proto
scripts/: build.sh  deploy_to_prod.sh  install-protoc.sh  task_tracker.py
src/: docs.rs  lib.rs  main.rs
src/api/: auth.rs  health.rs  mod.rs  refresh_token.rs  user.rs
src/config/: mod.rs
src/core/: auth.rs  mod.rs  refresh_token.rs  user.rs
src/docs/: validation.rs
src/grpc/: connection_pool.rs  mod.rs  user_stats.rs
src/infrastructure/: database.rs  mod.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs  rate_limit_configs.rs  validation.rs  validation_integration_tests.rs
tests/: documentation_test_runner.rs  documentation_validation.rs  example_compilation.rs  grpc_connection_pool_integration.rs  integration.rs  openapi_validation.rs  simple_doc_test.rs
tests/common/: mod.rs
