[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "time"] }
tower = "0.4"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
jsonwebtoken = "9.0"
bcrypt = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
hyper = "1.6.0"
argon2 = "0.5"
rand_core = "0.6"
async-trait = "0.1"
# Web framework
axum = { version = "0.7.2", features = ["json"] }
axum-extra = { version = "0.7.4" }

# Rate limiting and caching
redis = { version = "0.24", features = ["tokio-comp"], optional = true }
dashmap = "6.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# API Documentation
utoipa = { version = "4.0.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }

# gRPC
tonic = "0.10"
prost = "0.12"
tonic-reflection = "0.10"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-test = "0.4"
tempfile = "3.8"
serial_test = "3.0"
